--- a/assets/components/patronsEvents/patronsEvents.scss
+++ b/assets/components/patronsEvents/patronsEvents.scss
@@ -89,9 +89,8 @@
     background: transparent;
     color: gu-colour(garnett-neutral-1);
     border: 1px solid gu-colour(garnett-neutral-1);
-    height: $cta-height;
-    line-height: $cta-height;
-    padding: 0 30px 0 25px;
+    height: $cta-height - 2;
+    line-height: $cta-height - 2;
     transition: background-color .3s;
 
     &:hover {
@@ -106,13 +105,6 @@
 
   .svg-arrow-right-straight {
     fill: gu-colour(garnett-neutral-1);
-    height: 35%;
-    top: 14px;
-    right: 13px;
-
-    // Fix for IE.
-    @include mq($from: tablet) {
-      left: 89%;
-    }
+    top: 13px;
   }
 }
