--- a/assets/components/threeSubscriptions/threeSubscriptions.scss
+++ b/assets/components/threeSubscriptions/threeSubscriptions.scss
@@ -124,17 +124,21 @@
   }
 
   .component-cta-link {
-    height: $cta-height;
-    padding: 0 30px 0 25px;
-    font-size: 14px;
-    line-height: $cta-height;
+    padding-left: 28px;
     background-color: transparent;
-    transition: background-color .3s;
+    border: 1px solid;
+    height: $cta-height - 2;
+    line-height: $cta-height - 2;
+  }
+
+  .svg-arrow-right-straight {
+    fill: gu-colour(garnett-neutral-1);
+    top: 13px;
   }
 
   .component-cta-link--digital-sub {
     color: gu-colour(lifestyle-garnett-main-1);
-    border: 1px solid gu-colour(lifestyle-garnett-main-1);
+    border-color: gu-colour(lifestyle-garnett-main-1);
 
     .svg-arrow-right-straight {
       fill: gu-colour(lifestyle-garnett-main-1);
@@ -152,7 +156,7 @@
 
   .component-cta-link--paper-sub {
     color: gu-colour(sport-garnett-media-main-1);
-    border: 1px solid gu-colour(sport-garnett-media-main-1);
+    border-color: gu-colour(sport-garnett-media-main-1);
 
     .svg-arrow-right-straight {
       fill: gu-colour(sport-garnett-media-main-1);
@@ -170,7 +174,7 @@
 
   .component-cta-link--paper-digi-sub {
     color: gu-colour(opinion-garnett-main-1);
-    border: 1px solid gu-colour(opinion-garnett-main-1);
+    border-color: gu-colour(opinion-garnett-main-1);
 
     .svg-arrow-right-straight {
       fill: gu-colour(opinion-garnett-main-1);
@@ -183,26 +187,6 @@
       .svg-arrow-right-straight {
         fill: #fff;
       }
-    }
-  }
-
-  .svg-arrow-right-straight {
-    fill: gu-colour(garnett-neutral-1);
-    height: 35%;
-    top: 14px;
-    right: 16px;
-
-    // Fixes for IE.
-    @include mq($from: tablet) {
-      left: 93%;
-    }
-
-    @include mq($from: leftCol) {
-      left: 88%;
-    }
-
-    @include mq($from: wide) {
-      left: 90%;
     }
   }
 }
