--- a/assets/pages/error/error.scss
+++ b/assets/pages/error/error.scss
@@ -36,26 +36,13 @@
     }
 
     .component-cta-link {
-      box-sizing: border-box;
-      height: 46px;
-      line-height: 46px;
-      padding: 0 $gu-h-spacing;
-
       @include mq($from: phablet) {
-        width: 292px;
+        width: 252px;
       }
     }
 
     .svg-arrow-right-straight {
       fill: gu-colour(garnett-neutral-1);
-      height: 35%;
-      top: 14px;
-      right: 15px;
-
-      // Fix for IE.
-      @include mq($from: phablet) {
-        left: 258px;
-      }
     }
   }
 
@@ -82,12 +69,19 @@
 
   .component-cta-link--guardian-home-page {
     background-color: #fff;
+    margin-top: $gu-v-spacing;
     color: gu-colour(garnett-neutral-1);
     border: 1px solid gu-colour(garnett-neutral-1);
+    height: 42px;
+    line-height: 42px;
 
     &:hover {
       color: darken(gu-colour(garnett-neutral-1), 5%);
       border-color: darken(gu-colour(garnett-neutral-1), 5%);
+    }
+
+    .svg-arrow-right-straight {
+      top: 13px;
     }
   }
 }
