--- a/assets/pages/error/error.scss
+++ b/assets/pages/error/error.scss
@@ -35,12 +35,6 @@
       }
     }
 
-    .component-cta-link {
-      @include mq($from: phablet) {
-        width: 252px;
-      }
-    }
-
     .svg-arrow-right-straight {
       fill: gu-colour(garnett-neutral-1);
     }
@@ -65,23 +59,25 @@
     &:hover {
       background-color: darken(gu-colour(news-garnett-highlight), 5%);
     }
+
+    @include mq($from: phablet) {
+      width: 252px;
+    }
   }
 
   .component-cta-link--guardian-home-page {
     background-color: #fff;
     margin-top: $gu-v-spacing;
     color: gu-colour(garnett-neutral-1);
-    border: 1px solid gu-colour(garnett-neutral-1);
-    height: 42px;
-    line-height: 42px;
+    border-color: gu-colour(garnett-neutral-1);
 
     &:hover {
       color: darken(gu-colour(garnett-neutral-1), 5%);
       border-color: darken(gu-colour(garnett-neutral-1), 5%);
     }
 
-    .svg-arrow-right-straight {
-      top: 13px;
+    @include mq($from: phablet) {
+      width: 250px;
     }
   }
 }
