--- a/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
+++ b/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
@@ -22,4 +22,56 @@
   .component-left-margin-section__content {
     overflow-x: hidden;
   }
+
+  .gridImage {
+    margin-top: 37px;
+    margin-left: 12px;
+    margin-bottom: -7px;
+  }
+
+  .gridImage__desktop {
+    display: none;
+    @include mq($from: desktop) {
+      display: block;
+    }
+  }
+
+  .gridImage__tablet {
+    display: none;
+    @include mq($from: tablet, $until: desktop) {
+      display: block;
+    }
+  }
+
+  .gridImage__mobile {
+    display: none;
+    @include mq($until: tablet) {
+      display: block;
+    }
+  }
+
+  .headerTitle {
+    width: 100%;
+    height: 101px;
+    background-color: #000000;
+    color: #ffffff;
+    font-family: $gu-egyptian-web;
+    font-weight: bold;
+    font-style: normal;
+    font-stretch: normal;
+    letter-spacing: normal;
+    padding-left: 12px;
+    font-size: 28px;
+
+    @include mq($from: leftCol) {
+      font-size: 36px;
+    }
+    @include mq($from: desktop, $until: leftCol) {
+      font-size: 32px;
+    }
+    @include mq($from: phablet, $until: desktop) {
+      font-size: 30px;
+    }
+  }
+
 }
