--- a/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
+++ b/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
@@ -38,6 +38,10 @@
         width: 460px;
         margin: 0 auto;
       }
+
+      @include mq($from: tablet) {
+        width: 345px;
+      }
     }
 
     .component-price-cta {
@@ -52,6 +56,10 @@
       vertical-align: top;
     }
 
+    @include mq($from: desktop) {
+      width: 485px;
+    }
+
     @include mq($from: leftCol) {
       width: 520px;
     }
@@ -61,10 +69,6 @@
     border-bottom: 1px solid gu-colour(garnett-neutral-4);
     padding: 0 ($gu-h-spacing / 2);
     margin-bottom: $gu-v-spacing / 2;
-
-    @include mq($from: tablet) {
-      width: 345px;
-    }
   }
 
   .product-block__heading {
@@ -138,6 +142,17 @@
   }
 
   .product-block__product--daily-edition {
+    .component-grid-image {
+      @include mq($from: desktop) {
+        position: relative;
+        left: -100px;
+      }
+
+      @include mq($from: leftCol) {
+        left: -135px;
+      }
+    }
+
     .product-block__product-heading {
       background-color: gu-colour(sport-garnett-media-main-1);
     }
@@ -175,11 +190,12 @@
       height: 100px;
       font-size: 60px;
       line-height: 100px;
+      top: 88px;
+      left: 325px;
     }
 
     @include mq($from: leftCol) {
-      left: 395px;
-      top: 160px;
+      top: 167px;
     }
   }
 }
