Tidied up the spacing of the product block at wider breakpoints.

--- a/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
+++ b/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
@@ -45,7 +45,9 @@
     }
 
     .component-price-cta {
-      margin-top: $gu-v-spacing * 2;
+      @include mq($until: desktop) {
+        margin-top: $gu-v-spacing * 2;
+      }
     }
   }
 
