Set the correct background colour on the cancel message.

--- a/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
+++ b/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
@@ -53,6 +53,10 @@
         margin-top: $gu-v-spacing * 2;
       }
     }
+
+    .component-price-cta__cancel {
+      background-color: #fff;
+    }
   }
 
   .product-block__product {
