--- a/assets/pages/digital-subscription-landing/components/independentJournalismSection.scss
+++ b/assets/pages/digital-subscription-landing/components/independentJournalismSection.scss
@@ -5,6 +5,7 @@
 }
 
 .component-independent-journalism__content {
+  box-sizing: border-box;
   padding-left: 11px;
   width: 100%;
 }
@@ -27,6 +28,7 @@
   font-size: 22px;
   font-weight: 300;
   line-height: 1.18;
+  padding-right: 18px;
   @include mq($from: leftCol) {
     width: 620px;
     font-size: 36px;
@@ -49,7 +51,6 @@
 .svg-amber-rudd {
   position: relative;
   top: -81px;
-  margin-left: 50px;
   margin-bottom: -143px;
   z-index: 2;
   @include mq($until: leftCol) {
@@ -72,10 +73,10 @@
 .svg-amber-zuck {
   left: -112px;
   position:absolute;
-  top: -220px;
+  top: -221px;
 
   @include mq($from: mobileMedium) {
-    left: -78px;
+    left: -76px;
   }
 
   @include mq($from: mobileLandscape) {
@@ -83,7 +84,11 @@
   }
 
   @include mq($from: tablet) {
-    left: 163px;
+    left: 162px;
+  }
+
+  @include mq($from: desktop) {
+    left: 182px;
   }
 
   @include mq($from: leftCol) {
