--- a/assets/pages/contributions-landing/contributionsLanding.scss
+++ b/assets/pages/contributions-landing/contributionsLanding.scss
@@ -1,31 +1,31 @@
 // -----  gu-sass ----- //
 
-@import '../../stylesheets/gu-sass/gu-sass';
+@import '~stylesheets/gu-sass/gu-sass';
 
 // ----- Shared Components ----- //
 
-@import '../../components/headers/countrySwitcherHeader/countrySwitcherHeader';
-@import '../../components/countryGroupSwitcher/countryGroupSwitcher';
-@import '../../components/selectInput/selectInput';
-@import '../../components/introduction/introduction';
-@import '../../components/introduction/circlesIntroduction';
-@import '../../components/highlights/highlights';
-@import '../../components/contribute/contribute';
-@import '../../components/pageSection/pageSection';
-@import '../../components/secure/secure';
-@import '../../components/contributionAwarePaymentLogos/contributionAwarePaymentLogos';
-@import '../../components/contributionSelection/contributionSelection';
-@import '../../components/radioToggle/radioToggle';
-@import '../../components/numberInput/numberInput';
-@import '../../components/errorMessage/errorMessage';
-@import '../../components/contributionPaymentCtas/contributionPaymentCtas';
-@import '../../components/legal/termsPrivacy/termsPrivacy';
-@import '../../components/footer/footer';
-@import '../../components/svgs/svg';
-@import '../../components/ctaLink/ctaLink';
-@import '../../components/legal/contribLegal/contribLegal';
-@import '../../components/payPalContributionButton/payPalContributionButton';
-@import '../../components/switchable/errorComponents/paymentError';
+@import '~components/headers/countrySwitcherHeader/countrySwitcherHeader';
+@import '~components/countryGroupSwitcher/countryGroupSwitcher';
+@import '~components/selectInput/selectInput';
+@import '~components/introduction/introduction';
+@import '~components/introduction/circlesIntroduction';
+@import '~components/highlights/highlights';
+@import '~components/contribute/contribute';
+@import '~components/pageSection/pageSection';
+@import '~components/secure/secure';
+@import '~components/contributionAwarePaymentLogos/contributionAwarePaymentLogos';
+@import '~components/contributionSelection/contributionSelection';
+@import '~components/radioToggle/radioToggle';
+@import '~components/numberInput/numberInput';
+@import '~components/errorMessage/errorMessage';
+@import '~components/contributionPaymentCtas/contributionPaymentCtas';
+@import '~components/legal/termsPrivacy/termsPrivacy';
+@import '~components/footer/footer';
+@import '~components/svgs/svg';
+@import '~components/ctaLink/ctaLink';
+@import '~components/legal/contribLegal/contribLegal';
+@import '~components/payPalContributionButton/payPalContributionButton';
+@import '~components/switchable/errorComponents/paymentError';
 
 // ----- Page Specific Styles ----- //
 
