--- a/app/views/monthlyContributions.scala.html
+++ b/app/views/monthlyContributions.scala.html
@@ -10,7 +10,7 @@
   id: String,
   js: String,
   css: String,
-  user: IdUser,
+  user: Option[IdUser],
   uatMode: Boolean,
   defaultStripeConfig: StripeConfig,
   uatStripeConfig: StripeConfig,
@@ -21,17 +21,19 @@
     <script type="text/javascript">
         window.guardian = window.guardian || {};
         window.guardian.uatMode = @uatMode;
-        window.guardian.user = {
-            id: "@user.id",
-            email: "@user.primaryEmailAddress",
-            @user.publicFields.displayName.map { displayName =>
-            displayName: "@displayName",
+        @user.map{ x =>
+            window.guardian.user = {
+                id: "@x.id",
+                email: "@x.primaryEmailAddress",
+            @x.publicFields.displayName.map { displayName =>
+                displayName: "@displayName",
             }
-            @for(fields <- user.privateFields; firstName <- fields.firstName; lastName <- fields.secondName) {
+            @for(fields <- x.privateFields; firstName <- fields.firstName; lastName <- fields.secondName) {
                 firstName: "@firstName",
                 lastName: "@lastName",
             }
         };
+    }
         window.guardian.stripeKeyDefaultCurrencies = {
           default: "@defaultStripeConfig.forCurrency(None).publicKey",
           uat: "@uatStripeConfig.forCurrency(None).publicKey"
