--- a/assets/pages/digital-subscription-checkout/digitalSubscriptionCheckout.scss
+++ b/assets/pages/digital-subscription-checkout/digitalSubscriptionCheckout.scss
@@ -12,6 +12,8 @@
 @import '~components/headers/simpleHeader/simpleHeader';
 @import '~components/leftMarginSection/leftMarginSection';
 @import '~components/customerService/customerService';
+@import '~components/headingBlock/headingBlock';
+@import '~components/subscriptionsThankYou/subscriptionsThankYou';
 
 
 // ----- Page-Specific Styles ----- //
