--- a/app/views/newMain.scala.html
+++ b/app/views/newMain.scala.html
@@ -25,7 +25,13 @@
 <body>
 
   <h1>@title</h1>
-  <p>@description</p>
+	<p>@description</p>
+	
+	@if(switches.experiments.get("new-payment-flow").exists(_.isParticipating)) {
+		<p>You're in the test dude!</p>
+	} else {
+		<p>Sorry old chum no test for you :(</p>
+	}
   
 </body>
 </html>
