--- a/app/views/newMain.scala.html
+++ b/app/views/newMain.scala.html
@@ -1,6 +1,6 @@
 @import assets.AssetsResolver
 @import views.ViewHelpers._
-@import switchboard.Switches
+@import switchboard.{ Switches, Group }
 @(
 	title: String,
 	description: Option[String] = None,
@@ -27,10 +27,12 @@
   <h1>@title</h1>
 	<p>@description</p>
 	
-	@if(switches.experiments.get("new-payment-flow").exists(_.isParticipating)) {
-		<p>You're in the test dude!</p>
-	} else {
-		<p>Sorry old chum no test for you :(</p>
+	@switches.experiments.get("new-payment-flow").map { x =>
+		@x.value match {
+			case Group.Control => { <p>You're in the test dude! (but only in the control, boo)</p> }
+			case Group.Variant => { <p>You're in the test dude!</p> }
+			case Group.Unknown => { <p>Sorry old chum no test for you :(</p> }
+		}
 	}
   
 </body>
