--- a/assets/components/subscriptionsThankYou/subscriptionsThankYou.scss
+++ b/assets/components/subscriptionsThankYou/subscriptionsThankYou.scss
@@ -32,60 +32,25 @@
     }
   }
 
-  .component-cta-link {
-    background-color: transparent;
-    border: 1px solid gu-colour(garnett-neutral-1);
-    height: $cta-height;
-    box-sizing: border-box;
-    line-height: $cta-height - 2;
-    color: gu-colour(garnett-neutral-1);
-    margin-bottom: $gu-v-spacing;
-
-    @include mq($from: mobileLandscape) {
-      width: 300px;
-    }
-
-    &:hover {
-      background-color: gu-colour(garnett-neutral-1);
-      color: #fff;
-
-      .svg-arrow-right-straight {
-        fill: #fff;
-      }
-    }
-
-    .svg-arrow-right-straight {
-      fill: gu-colour(garnett-neutral-1);
-      height: 40%;
-      top: 30%;
-    }
-  }
-
-  .component-left-margin-section--apps {
-    .component-left-margin-section__content {
-      padding: 2px ($gu-h-spacing / 2) 0;
-      box-sizing: border-box;
-
-      @include mq($from: tablet) {
-        border-left: 1px solid gu-colour(garnett-neutral-4);
-      }
-    }
-  }
-
   .component-left-margin-section--return {
     .component-left-margin-section__content {
       box-sizing: border-box;
       background-color: gu-colour(media-garnett-main-1);
-      padding: ($gu-v-spacing * 2) ($gu-h-spacing / 2) $gu-v-spacing;
+      padding: ($gu-v-spacing * 2) ($gu-h-spacing / 2);
     }
 
     .component-cta-link {
       background-color: gu-colour(garnett-neutral-1);
       color: #fff;
       font-weight: bold;
+      box-sizing: border-box;
 
       &:hover {
         background-color: darken(gu-colour(garnett-neutral-1), 5%);
+      }
+
+      @include mq($from: mobileLandscape) {
+        width: 300px;
       }
     }
 
@@ -99,50 +64,8 @@
   overflow-x: hidden;
 }
 
-.component-subscriptions-thank-you__ctas {
-  margin-bottom: $gu-v-spacing * 2;
-
-  @include mq($from: tablet) {
-    display: inline-block;
-    vertical-align: top;
-    margin-top: $gu-v-spacing;
-    margin-left: $gu-h-spacing;
-  }
-}
-
-.component-subscriptions-thank-you__heading {
-  font-size: 22px;
-  line-height: 1.18;
-  font-weight: 300;
-  font-family: $gu-egyptian-web;
-
-  @include mq($from: tablet) {
-    font-size: 28px;
-    width: 300px;
-  }
-
-  @include mq($from: desktop) {
-    font-size: 36px;
-    width: 250px;
-  }
-}
-
 .component-subscriptions-thank-you__congrats {
   font-weight: bold;
-}
-
-.component-subscriptions-thank-you__copy {
-  font-size: 14px;
-  line-height: 1.43;
-  font-family: $gu-egyptian-web;
-  color: gu-colour(media-garnett-main-1);
-  margin: $gu-v-spacing 0 ($gu-v-spacing * 2);
-
-  @include mq($from: tablet) {
-    display: inline-block;
-    width: 300px;
-    vertical-align: top;
-  }
 }
 
 .component-subscriptions-thank-you__strong {
