--- a/app/views/newMain.scala.html
+++ b/app/views/newMain.scala.html
@@ -1,6 +1,6 @@
 @import assets.AssetsResolver
 @import views.ViewHelpers._
-@import switchboard.{ Switches, Group }
+@import switchboard.Switches
 @(
 	title: String,
 	description: Option[String] = None,
@@ -25,15 +25,7 @@
 <body>
 
   <h1>@title</h1>
-	<p>@description</p>
-	
-	@switches.experiments.get("new-payment-flow").map { x =>
-		@x.value match {
-			case Group.Control => { <p>You're in the test dude! (but only in the control, boo)</p> }
-			case Group.Variant => { <p>You're in the test dude!</p> }
-			case Group.Unknown => { <p>Sorry old chum no test for you :(</p> }
-		}
-	}
+  <p>@description</p>
   
 </body>
 </html>
