--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -381,63 +381,63 @@ form {
   display: none;
 }
 
-.form__radio-group__list {
+.form__radio-group-list {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
-.form__radio-group__input {
+.form__radio-group-input {
   display: none;
 }
 
-.form__radio-group__label {
+.form__radio-group-label {
   cursor: pointer;
 }
 
-.form__radio-group--tabs .form__radio-group__list {
+.form__radio-group--tabs .form__radio-group-list {
   display: flex;
 }
     
-.form__radio-group--tabs .form__radio-group__item {
+.form__radio-group--tabs .form__radio-group-item {
   border-top: 1px solid gu-colour(neutral-4);
   flex: 1;
   margin: 0 -10px;
 }
 
-.form__radio-group--tabs .form__radio-group__item + .form__radio-group__item {
+.form__radio-group--tabs .form__radio-group-item + .form__radio-group-item {
   border-left: 1px solid gu-colour(neutral-4);
 }
 
-.form__radio-group--tabs .form__radio-group__input + .form__radio-group__label {
+.form__radio-group--tabs .form__radio-group-input + .form__radio-group-label {
   display: block;
   padding: 4px 10px 4px;
 }
 
-.form__radio-group--tabs .form__radio-group__input:checked + .form__radio-group__label {
+.form__radio-group--tabs .form__radio-group-input:checked + .form__radio-group-label {
   background: gu-colour(garnett-neutral-5);
   color: gu-colour(sport-garnett-media-main-1);
 }
         
-.form__radio-group--tabs .form__radio-group__input:not(:checked) + .form__radio-group__label {
+.form__radio-group--tabs .form__radio-group-input:not(:checked) + .form__radio-group-label {
   background: gu-colour(garnett-neutral-3);
   color: gu-colour(garnett-neutral-2);
 }
 
-.form__radio-group--pills .form__radio-group__list {
+.form__radio-group--pills .form__radio-group-list {
   display: flex;
 }
 
-.form__radio-group--pills .form__radio-group__item {
+.form__radio-group--pills .form__radio-group-item {
   width: 50px;
   height: 50px;
 }
 
-.form__radio-group--pills .form__radio-group__item + .form__radio-group__item {
+.form__radio-group--pills .form__radio-group-item + .form__radio-group-item {
   margin-left: 10px;
 }
 
-.form__radio-group--pills .form__radio-group__input + .form__radio-group__label {
+.form__radio-group--pills .form__radio-group-input + .form__radio-group-label {
   border: solid 1px gu-colour(sport-garnett-media-main-1);
   border-radius: 25px;
   box-sizing: border-box;
@@ -448,16 +448,16 @@ form {
   height: 50px;
 }
   
-.form__radio-group--pills .form__radio-group__input:checked + .form__radio-group__label {
+.form__radio-group--pills .form__radio-group-input:checked + .form__radio-group-label {
   background: gu-colour(sport-garnett-media-main-1);
   color: gu-colour(garnett-neutral-5);
 }
 
-.form__radio-group--buttons .form__radio-group__item + .form__radio-group__item {
+.form__radio-group--buttons .form__radio-group-item + .form__radio-group-item {
   margin-top: 6px;
 }
 
-.form__radio-group--buttons .form__radio-group__label {
+.form__radio-group--buttons .form__radio-group-label {
   align-items: center;
   border: 1px solid gu-colour(neutral-4);
   border-radius: 20px;
@@ -466,12 +466,12 @@ form {
   padding: 9px 0;
 }
 
-.form__radio-group--buttons .form__radio-group__input:checked + .form__radio-group__label {
+.form__radio-group--buttons .form__radio-group-input:checked + .form__radio-group-label {
   border-color: gu-colour(sport-garnett-media-main-1);
   font-weight: bold;
 }
 
-.form__radio-group--buttons .form__radio-group__input + .form__radio-group__label .radio-ui {
+.form__radio-group--buttons .form__radio-group-input + .form__radio-group-label .radio-ui {
   width: 8px;
   height: 8px;
   border-radius: 100%;
@@ -483,33 +483,33 @@ form {
   margin-right: 15px;
 }
 
-.form__radio-group--buttons .form__radio-group__input:not(:checked) + .form__radio-group__label:hover .radio-ui {
+.form__radio-group--buttons .form__radio-group-input:not(:checked) + .form__radio-group-label:hover .radio-ui {
   border-color: gu-colour(sport-garnett-media-main-1);
   box-shadow: 0 0 0 2px gu-colour(live-garnett-sport2);
 }
 
-.form__radio-group--buttons .form__radio-group__input:not(:checked) + .form__radio-group__label svg {
+.form__radio-group--buttons .form__radio-group-input:not(:checked) + .form__radio-group-label svg {
   filter: grayscale(100%);
 }
 
-.form__radio-group--buttons .form__radio-group__input:checked + .form__radio-group__label .radio-ui {
+.form__radio-group--buttons .form__radio-group-input:checked + .form__radio-group-label .radio-ui {
   border-color: gu-colour(sport-garnett-media-main-1);
   box-shadow: inset 0 0 0 1px gu-colour(garnett-neutral-5);
   background: gu-colour(sport-garnett-media-main-1);
 }
 
-.form__radio-group--buttons .form__radio-group__input + .form__radio-group__label .radio-ui__label {
+.form__radio-group--buttons .form__radio-group-input + .form__radio-group-label .radio-ui__label {
   flex: 1;
 }
 
-.form__radio-group--buttons .form__radio-group__input + .form__radio-group__label .svg-paypal {
+.form__radio-group--buttons .form__radio-group-input + .form__radio-group-label .svg-paypal {
   height: 18px;
   width: 15px;
   margin-right: 16px;
   margin-left: 5px;
 }
 
-.form__radio-group--buttons .form__radio-group__input + .form__radio-group__label .svg-new-credit-card {
+.form__radio-group--buttons .form__radio-group-input + .form__radio-group-label .svg-new-credit-card {
   height: 14px;
   width: 22px;
   margin-right: 10px;
@@ -565,7 +565,7 @@ form {
   padding-bottom: 30px;
 }
 
-.form__submit__button {
+.form__submit-button {
   align-items: center;
   background: gu-colour(news-garnett-highlight);
   border: none;
@@ -574,8 +574,8 @@ form {
   padding: 9px 20px;
 }
 
-.form__submit__button:hover,
-.form__submit__button:focus {
+.form__submit-button:hover,
+.form__submit-button:focus {
   background: #e5ce00;
 }
 
