Pointer cursor on submit and close buttons

--- a/assets/components/directDebit/directDebitPopUpForm/directDebitPopUpForm.scss
+++ b/assets/components/directDebit/directDebitPopUpForm/directDebitPopUpForm.scss
@@ -74,6 +74,7 @@
   height: 40px;
   width: 40px;
   float: right;
+  cursor: pointer;
   .svg-cross {
     padding-left: 1px;
     padding-top: 3px;
